feat: try some mcps

--- a/.mise.toml
+++ b/.mise.toml
@@ -55,3 +55,5 @@ yamlfmt = "0.20.0"
 actionlint = "1.7.8"
 "npm:prettier" = "3.6.2"
 shellcheck = "0.11.0"
+"ubi:controlplaneio-fluxcd/flux-operator" = "latest"
+"npm:kubernetes-mcp-server" = "0.0.53"
