--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -121,8 +121,10 @@ spec:
               requests:
                 cpu: 10m
                 memory: 256Mi
+                gpu.intel.com/i915: 1
               limits:
-                memory: 1Gi
+                memory: 2Gi
+                gpu.intel.com/i915: 1
             securityContext:
               readOnlyRootFilesystem: false
 
