--- a/.mise.toml
+++ b/.mise.toml
@@ -14,7 +14,8 @@ _.path = ['{{config_root}}/node_modules/.bin']
 postinstall = "helm plugin install https://github.com/databus23/helm-diff || true"
 
 [tools]
-uv = "0.9.7"
+# https://docs.renovatebot.com/modules/manager/mise/#supported-default-registry-tool-short-names
+uv = "0.9.5"
 python = "3"
 node = "24.11.0"
 
@@ -29,22 +30,22 @@ node = "24.11.0"
 "aqua:kustomize" = "5.7.1"
 "aqua:helm" = "3.19.0"
 "aqua:helmfile" = "1.1.9"
-"aqua:k9s" = "0.32.7"
-"aqua:stern" = "1.31.0"
+"aqua:derailed/k9s" = "0.32.7"
+"aqua:stern/stern" = "1.31.0"
 
 # Talos
-"aqua:talos" = "1.9.3"
+"aqua:siderolabs/talos" = "1.9.3"
 "aqua:talhelper" = "3.0.38"
 
 # Tools
-"aqua:task" = "3.44.0"
+"aqua:go-task/task" = "3.44.0"
 "aqua:yq" = "4.48.1"
 "aqua:jq" = "1.8.1"
 "github:DopplerHQ/cli" = "3.75.1"
 "cargo:minijinja-cli" = "2.7.0"
 "ubi:gorcon/rcon-cli" = { version = "0.10.3", exe = "rcon" }
 "github:slsa-framework/slsa-verifier" = "2.7.1"
-"aqua:hurl" = "7.0.0"
+"aqua:Orange-OpenSource/hurl" = "7.0.0"
 
 # hk
 "aqua:hk" = "1.20.0"
