--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,29 +1,26 @@
 {
-  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
   extends: [
-    'github>stevewm/renovate-config:default.json5',
-    'github>stevewm/homelab//.github/renovate/branchPrefixes.json5',
-    'github>stevewm/homelab//.github/renovate/customDatasources.json5',
-    'github>stevewm/homelab//.github/renovate/grafanaDashboards.json5',
-    'github>stevewm/homelab//.github/renovate/groups.json5',
-    'github>stevewm/homelab//.github/renovate/vintagestory.json5',
+    "github>stevewm/renovate-config:default.json5",
+    "github>stevewm/homelab//.github/renovate/branchPrefixes.json5",
+    "github>stevewm/homelab//.github/renovate/customDatasources.json5",
+    "github>stevewm/homelab//.github/renovate/grafanaDashboards.json5",
+    "github>stevewm/homelab//.github/renovate/groups.json5",
+    "github>stevewm/homelab//.github/renovate/vintagestory.json5",
   ],
   schedule: [
-    '* 17-23 * * 5', // https://youtu.be/kfVsfOSbJY0
-    '* 0-23 * * 6',
-    '* 0-23 * * 7',
+    "* 17-23 * * 5", // https://youtu.be/kfVsfOSbJY0
+    "* 0-23 * * 6",
+    "* 0-23 * * 7",
   ],
-  ignorePaths: [
-    '**kubernetes/**/.archive/**',
-    '**nas/.archive/**',
-  ],
+  ignorePaths: ["**kubernetes/**/.archive/**", "**nas/.archive/**"],
   flux: {
-    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"]
+    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"],
   },
   "helm-values": {
-    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"]
+    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"],
   },
   kubernetes: {
-    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"]
+    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"],
   },
 }
