--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: media
 resources:
   - ./jellyfin/ks.yaml
   - ./jellyseerr/ks.yaml
+  - ./tunarr/ks.yaml
   - ./wrtag/ks.yaml
 components:
   - ../../flux/components/namespace
