fix controller name

--- a/kubernetes/apps/media/tunarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tunarr/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
           type: RuntimeDefault
 
     controllers:
-      jellyfin:
+      tunarr:
         defaultContainerOptions:
           securityContext:
             allowPrivilegeEscalation: false
@@ -105,10 +105,7 @@ spec:
           gethomepage.dev/name: *app
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: media
-          gethomepage.dev/icon: sh-jellyfin-light.png
-          gethomepage.dev/widget.key: "{{ `{{HOMEPAGE_VAR_JELLYFIN_API_KEY}}` }}"
-          gethomepage.dev/widget.type: *app
-          gethomepage.dev/widget.url: "http://tunarr.media.svc.cluster.local"
+          gethomepage.dev/icon: mdi-television-classic-#ffffff
 
     persistence:
       config:
