--- a/kubernetes/apps/media/tunarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tunarr/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
 
     route:
       app:
-        hostnames: ["channel.stevewm.dev"]
+        hostnames: ["channels.stevewm.dev"]
         parentRefs:
           - name: internal
             namespace: network
