--- a/kubernetes/apps/media/tunarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tunarr/app/helmrelease.yaml
@@ -54,7 +54,7 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/chrisbenincasa/tunarr:0.22.11
+              repository: ghcr.io/chrisbenincasa/tunarr
               tag: 0.22.11@sha256:dcd11875c089e85c75d5e6b38177f04f4836c435084f00cc1a6827e6c4644588
             env:
               TUNARR_SERVER_PORT: &http 80
