fix(tunarr): emptyDir for /root/.local/share/tunarr

--- a/kubernetes/apps/media/tunarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tunarr/app/helmrelease.yaml
@@ -116,3 +116,7 @@ spec:
         type: emptyDir
         globalMounts:
           - path: /.dizquetv
+      tunarr:
+        type: emptyDir
+        globalMounts:
+          - path: /root/.local/share/tunarr
