fix(tunarr): set db path

--- a/kubernetes/apps/media/tunarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tunarr/app/helmrelease.yaml
@@ -59,6 +59,7 @@ spec:
             env:
               TUNARR_SERVER_PORT: &http 80
               TUNARR_SERVER_TRUST_PROXY: "true"
+              TUNARR_DATABASE_PATH: /config/tunarr
             probes:
               liveness: &probes
                 enabled: true
