--- a/kubernetes/apps/games/vintagestory/app/config/server/serverconfig.json
+++ b/kubernetes/apps/games/vintagestory/app/config/server/serverconfig.json
@@ -323,7 +323,7 @@
 
   "WorldConfig": {
     "Seed": null,
-    "SaveFileLocation": "/data/Saves/new-world.vcdbs",
+    "SaveFileLocation": "/data/Saves/world.vcdbs",
     "WorldName": "MPOF",
     "AllowCreativeMode": false,
     "PlayStyle": "surviveandbuild",
