--- a/kubernetes/apps/games/vintagestory/app/config/init/mods.yaml
+++ b/kubernetes/apps/games/vintagestory/app/config/init/mods.yaml
@@ -6,22 +6,22 @@ hooks:
     pre_run: "rm -rf {{.ModsDir}}/*.zip" # clear out old mods
 mods:
   - id: primitivesurvival
-    version: 3.9.4
-  - id: ExpandedFoods
-    version: 1.7.4
-  - id: ACulinaryArtillery
-    version: 1.2.5
+    version: 4.0.0
+  # - id: ExpandedFoods
+  #   version: 1.7.4
+  # - id: ACulinaryArtillery
+  #   version: 1.2.5
   - id: CarryOn
-    version: 1.10.2
+    version: 1.12.1
   - id: BetterRuins
-    version: 0.5.0
+    version: 0.5.2
   - id: th3dungeon
     version: 0.4.4
-  - id: VintageRCon
-    version: 1.0.0
+  # - id: VintageRCon
+  #   version: 1.0.0
   - id: webcartographer
-    version: 0.7.4
+    version: 0.8.1
   - id: pspeltpatch
     version: 0.0.2
-  - id: chiseltoolslite
-    version: 1.15.1
+  # - id: chiseltoolslite
+  #   version: 1.15.1
