feat(vs): enable driftdetection

--- a/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
   uninstall:
     keepHistory: false
   driftDetection:
-    mode: warn
+    mode: enabled
   values:
     defaultPodOptions:
       automountServiceAccountToken: false
