--- a/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
@@ -166,9 +166,9 @@ spec:
         type: configMap
         name: vintagestory
         globalMounts:
-          # - path: /data/serverconfig.json
-          #   subPath: serverconfig.json
-          #   readOnly: false
+          - path: /data/serverconfig.json
+            subPath: serverconfig.json
+            readOnly: false
           - path: /data/servermagicnumbers.json
             subPath: servermagicnumbers.json
             readOnly: true
