fix(vs): upgrade to new config version

--- a/kubernetes/apps/games/vintagestory/app/config/server/serverconfig-old.json
+++ b/kubernetes/apps/games/vintagestory/app/config/server/serverconfig-old.json
@@ -1,6 +1,6 @@
 {
-  "FileEditWarning": "",
-  "ConfigVersion": "1.8",
+  "EntityDebugMode": false,
+  "ConfigVersion": "1.5",
   "ServerName": "Melting Pot of Friendship",
   "ServerUrl": null,
   "ServerDescription": "Be nice!",
@@ -11,21 +11,19 @@
   "CompressPackets": true,
   "AdvertiseServer": false,
   "MaxClients": 16,
-  "MaxClientsInQueue": 0,
   "PassTimeWhenEmpty": false,
   "MasterserverUrl": "http://masterserver.vintagestory.at/api/v1/servers/",
   "ModDbUrl": "https://mods.vintagestory.at/",
-  "ClientConnectionTimeout": 150,
-  "EntityDebugMode": false,
+  "ClientConnectionTimeout": 120,
   "Password": null,
-  "MapSizeX": 1024000,
+  "MapSizeX": 1000000,
   "MapSizeY": 256,
-  "MapSizeZ": 1024000,
+  "MapSizeZ": 1000000,
   "ServerLanguage": "en",
   "MaxChunkRadius": 12,
-  "TickTime": 33.333332,
-  "SpawnCapPlayerScaling": 0.5,
-  "BlockTickChunkRange": 5,
+  "TickTime": 33.3333321,
+  "SpawnCapPlayerScaling": 0.75,
+  "BlockTickChunkRange": 4,
   "MaxMainThreadBlockTicks": 10000,
   "RandomBlockTicksPerChunk": 16,
   "BlockTickInterval": 300,
@@ -320,8 +318,9 @@
     }
   ],
   "DefaultRoleCode": "suplayer",
-  "ModPaths": ["Mods", "/data/Mods", "/mods"],
+  "ModPaths": ["Mods", "/data/mods", "/mods"],
   "AntiAbuse": 0,
+
   "WorldConfig": {
     "Seed": null,
     "SaveFileLocation": "/data/Saves/world.vcdbs",
@@ -399,30 +398,18 @@
   "GroupChatHistorySize": 20,
   "MaxOwnedGroupChannelsPerUser": 10,
   "OnlyWhitelisted": true,
-  "WhitelistMode": 0,
   "VerifyPlayerAuth": true,
   "DefaultSpawn": null,
   "AllowPvP": false,
   "AllowFireSpread": true,
   "AllowFallingBlocks": true,
   "HostedMode": false,
-  "HostedModeAllowMods": false,
-  "VhIdentifier": null,
   "StartupCommands": "/op stevewm",
   "RepairMode": false,
   "AnalyzeMode": false,
   "CorruptionProtection": true,
-  "RegenerateCorruptChunks": false,
+  "RegenerateCorruptChunks": true,
   "ChatRateLimitMs": 1000,
   "DieBelowDiskSpaceMb": 400,
-  "ModIdBlackList": null,
-  "ModIdWhiteList": null,
-  "ServerIdentifier": "8b6c2e85-41a4-4bec-ab59-7738f23f217b",
-  "LogBlockBreakPlace": false,
-  "LogFileSplitAfterLine": 500000,
-  "DieAboveErrorCount": 100000,
-  "LoginFloodProtection": false,
-  "TemporaryIpBlockList": false,
-  "DisableModSafetyCheck": false,
-  "DieAboveMemoryUsageMb": 50000
+  "ModIdBlackList": null
 }
