fix(stirling-pdf): extra emptyDir

--- a/kubernetes/apps/selfhosted/stirling-pdf/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/stirling-pdf/app/helmrelease.yaml
@@ -104,3 +104,5 @@ spec:
             subPath: tmp
           - path: /usr/share/tessdata
             subPath: tessdata
+          - path: /home/stirlingpdfuser
+            subPath: stirlingpdfuser
