fix(kps): retention

--- a/kubernetes/core/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/core/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -96,6 +96,15 @@ spec:
             memory: 2Gi
           limits:
             memory: 4Gi
+        retention: 14d
+        retentionSize: 50GB
+        storageSpec:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: local-hostpath
+              resources:
+                requests:
+                  storage: 55Gi
         podMonitorSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
         scrapeConfigSelectorNilUsesHelmValues: false
