--- a/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
@@ -159,6 +159,10 @@ spec:
           gethomepage.dev/group: games
           gethomepage.dev/icon: mdi-map-#ffffff
 
+    configMapsFromFolder:
+      enabled: true
+      basePath: ./resources/configmaps
+
     persistence:
       data:
         existingClaim: vintagestory-gamedata
