--- a/kubernetes/core/security/glauth/app/helmrelease.yaml
+++ b/kubernetes/core/security/glauth/app/helmrelease.yaml
@@ -100,6 +100,10 @@ spec:
             interval: 1m
             scrapeTimeout: 10s
 
+    configMapsFromFolder:
+      enabled: true
+      basePath: ./resources/configmaps
+
     persistence:
       config:
         type: secret
