chore(vintagestory): scale to 0

--- a/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/vintagestory/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
 
     controllers:
       vintagestory:
-        #replicas: 0
+        replicas: 0
         defaultContainerOptions:
           securityContext:
             allowPrivilegeEscalation: false
