--- a/.mise.toml
+++ b/.mise.toml
@@ -61,3 +61,4 @@ node = "24.12.0"
 "aqua:shellcheck" = "0.11.0"
 "ubi:controlplaneio-fluxcd/flux-operator" = "latest"
 "npm:kubernetes-mcp-server" = "0.0.55"
+rust = "1.92.0"
