chore: update recommended plugins

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,10 @@
 {
   "recommendations": [
+    "DavidAnson.vscode-markdownlint",
     "EditorConfig.EditorConfig",
     "Tyriar.sort-lines",
     "eamodio.gitlens",
+    "esbenp.prettier-vscode",
     "mrmlnc.vscode-json5",
     "redhat.vscode-yaml",
     "tamasfe.even-better-toml"
