feat!: deploy renovate-operator

--- a/kubernetes/apps/ci/kustomization.yaml
+++ b/kubernetes/apps/ci/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: ci
 resources:
   - ./actions-runner-controller/ks.yaml
+  - ./renovate-operator/ks.yaml
 components:
   - ../../flux/components/namespace
-  #- ../../flux/components/networkpolicy/default-deny
+  # - ../../flux/components/networkpolicy/default-deny
