--- a/.github/workflows/scheduled-renovate.yaml
+++ b/.github/workflows/scheduled-renovate.yaml
@@ -17,13 +17,13 @@ on:
         description: Renovate version
         default: latest
         required: false
-  schedule:
-    - cron: "0 * * * *" # Every hour
-  push:
-    branches: ["main"]
-    paths:
-      - .github/renovate.json5
-      - .github/renovate/**.json5
+  # schedule:
+  #   - cron: "0 * * * *" # Every hour
+  # push:
+  #   branches: ["main"]
+  #   paths:
+  #     - .github/renovate.json5
+  #     - .github/renovate/**.json5
 
 permissions:
   contents: read
