feat!: switch to seerr

--- a/kubernetes/apps/downloads/scraparr/app/externalsecret.yaml
+++ b/kubernetes/apps/downloads/scraparr/app/externalsecret.yaml
@@ -11,6 +11,6 @@ spec:
   target:
     name: scraparr
   data:
-    - secretKey: jellyseerr_api_key
+    - secretKey: seerr_api_key
       remoteRef:
-        key: JELLYSEERR_API_KEY
+        key: SEERR_API_KEY
