--- a/kubernetes/apps/media/seerr/ks.yaml
+++ b/kubernetes/apps/media/seerr/ks.yaml
@@ -3,16 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: app-jellyseerr
+  name: app-seerr
   namespace: &namespace media
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
-      app.kubernetes.io/name: &app jellyseerr
+      app.kubernetes.io/name: &app seerr
   interval: 30m
   timeout: 5m
-  path: ./kubernetes/apps/media/jellyseerr/app
+  path: ./kubernetes/apps/media/seerr/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -30,4 +30,4 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      VOLSYNC_CLAIM: jellyseerr-config
+      VOLSYNC_CLAIM: seerr-config
