feat!: switch to seerr (#2063)

--- a/kubernetes/apps/selfhosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/apps/selfhosted/homepage/app/externalsecret.yaml
@@ -31,9 +31,9 @@ spec:
       remoteRef:
         key: SABNZBD_API_KEY
 
-    - secretKey: HOMEPAGE_VAR_JELLYSEERR_API_KEY
+    - secretKey: HOMEPAGE_VAR_SEERR_API_KEY
       remoteRef:
-        key: JELLYSEERR_API_KEY
+        key: SEERR_API_KEY
 
     - secretKey: HOMEPAGE_VAR_JELLYFIN_API_KEY
       remoteRef:
