fix(seerr): correct widget type annotation

--- a/kubernetes/apps/media/seerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/seerr/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
           gethomepage.dev/group: media
           gethomepage.dev/icon: sh-jellyseerr-light.png
           gethomepage.dev/widget.key: "{{ `{{HOMEPAGE_VAR_SEERR_API_KEY}}` }}"
-          gethomepage.dev/widget.type: *app
+          gethomepage.dev/widget.type: jellyseerr
           gethomepage.dev/widget.url: "http://jellyseerr.media.svc.cluster.local"
 
     persistence:
