--- a/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
+++ b/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
@@ -38,13 +38,13 @@ spec:
     controllers:
       tof-tl:
         replicas: 1
+        defaultContainerOptionsStrategy: merge
         defaultContainerOptions:
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
             capabilities:
               drop: [ALL]
-        defaultContainerOptionsStrategy: merge
 
         annotations:
           reloader.stakater.com/auto: "true"
@@ -52,21 +52,18 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/stevewm/tof-tl
-              tag: latest@sha256:a7ed880879978602242ade0b8e77947fbf2353165e84ca8c476c95ed1f0ad95e
+              repository: ghcr.io/nginx/nginx-unprivileged
+              tag: 1.29.3-alpine@sha256:c2351965a68a252c32e0c03a5a7b2144087df078de199a3a67d35d41a41f4760
             probes:
               liveness: &probes
                 enabled: true
               readiness: *probes
-            env: []
             resources:
               requests:
                 cpu: 10m
                 memory: 64Mi
               limits:
                 memory: 128Mi
-            securityContext:
-              readOnlyRootFilesystem: false
 
     service:
       app:
@@ -90,3 +87,7 @@ spec:
     persistence:
       tmp:
         type: emptyDir
+      html:
+        type: emptyDir
+        globalMounts:
+          - path: /usr/share/nginx/html
