fix(tof-tl): tmp emptyDir

--- a/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
+++ b/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
@@ -109,6 +109,8 @@ spec:
                 port: *port
 
     persistence:
+      tmp:
+        type: emptyDir
       html:
         type: emptyDir
         globalMounts:
