fix(tof-tl): volume

--- a/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
+++ b/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
             command:
               - sh
               - -c
-              - ln -s /tmp/git/head/data /usr/share/nginx/html/public
+              - ln -s /tmp/git/head/data /usr/share/nginx/html/data
             resources:
               requests:
                 cpu: 5m
@@ -114,7 +114,7 @@ spec:
       html:
         type: emptyDir
         globalMounts:
-          - path: /usr/share/nginx/html
+          - path: /usr/share/nginx/html/data
       sync:
         type: emptyDir
         globalMounts:
