fix(tof-tl): set sync period

--- a/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
+++ b/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
@@ -88,6 +88,7 @@ spec:
               - --repo=https://github.com/stevewm/tof-tl
               - --root=/tmp/git
               - --link=head
+              - --period=300s
 
     service:
       app:
