fix(tof-tl): set correct link path

--- a/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
+++ b/kubernetes/apps/web/tof-tl/app/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
             command:
               - sh
               - -c
-              - ln -s /tmp/git/head/data /usr/share/nginx/html/data
+              - ln -sf /tmp/git/head/* /usr/share/nginx/html/data
             resources:
               requests:
                 cpu: 5m
