--- a/kubernetes/apps/web/tof-tl/app/kustomization.yaml
+++ b/kubernetes/apps/web/tof-tl/app/kustomization.yaml
@@ -4,3 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
+configMapGenerator:
+  - name: tof-tl-nginx-conf
+    files:
+      - ./config/default.conf
+generatorOptions:
+  disableNameSuffixHash: true
