--- a/.mise.toml
+++ b/.mise.toml
@@ -24,8 +24,6 @@ node = "24.13.0"
 "pipx:flux-local" = "7.5.6"
 
 # Kube
-"aqua:kubectl" = "1.35.0"
-"ubi:kubecolor/kubecolor" = "0.5.3"
 "aqua:CrunchyData/postgres-operator-client" = "0.5.3"
 "aqua:kustomize" = "5.8.0"
 "aqua:helm" = "4.1.0"
@@ -60,5 +58,7 @@ node = "24.13.0"
 "npm:prettier" = "3.8.1"
 "aqua:shellcheck" = "0.11.0"
 "ubi:controlplaneio-fluxcd/flux-operator" = "latest"
-"npm:kubernetes-mcp-server" = "0.0.57"
-rust = "1.93.0"
+"npm:kubernetes-mcp-server" = "0.0.56"
+rust = "1.92.0"
+kubecolor = "latest"
+kubens = "0.9.5"
