--- a/kubernetes/apps/selfhosted/stirling-pdf/app/helmrelease.yaml
+++ b/kubernetes/apps/selfhosted/stirling-pdf/app/helmrelease.yaml
@@ -28,9 +28,9 @@ spec:
       automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
-        runAsUser: 65534
-        runAsGroup: 65534
-        fsGroup: 65534
+        runAsUser: 1001
+        runAsGroup: 1001
+        fsGroup: 1001
         fsGroupChangePolicy: OnRootMismatch
         seccompProfile:
           type: RuntimeDefault
@@ -40,7 +40,7 @@ spec:
         defaultContainerOptions:
           securityContext:
             allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
+            # readOnlyRootFilesystem: true
             capabilities:
               drop: [ALL]
 
@@ -102,11 +102,7 @@ spec:
             subPath: pipeline
           - path: /tmp
             subPath: tmp
-          - path: /tmp/stirling-pdf
-            subPath: stirling-pdf
           - path: /usr/share/tessdata
             subPath: tessdata
           - path: /home/stirlingpdfuser
             subPath: stirlingpdfuser
-          - path: /usr/local/bin/diagnostics
-            subPath: diagnostics
