feat(jellyfin): export more metric details

--- a/kubernetes/apps/media/jellyfin/app/externalsecret.yaml
+++ b/kubernetes/apps/media/jellyfin/app/externalsecret.yaml
@@ -63,6 +63,7 @@ spec:
       remoteRef:
         key: JELLYFIN_OAUTH_CLIENT_SECRET
 
+
 # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/external-secrets.io/externalsecret_v1.json
 ---
 apiVersion: external-secrets.io/v1
@@ -109,8 +110,12 @@ spec:
                   season_index: 's{ .NowPlayingItem.ParentIndexNumber }'
                   client_name: '{ .Client }'
                   device_name: '{ .DeviceName }'
+                  play_method: '{ .PlayState.PlayMethod }'
+                  transcode_reason: '{ .TranscodingInfo.TranscodeReasons[0] }'
+                  hw_accel: '{ .TranscodingInfo.HardwareAccelerationType }'
                 values:
                   is_paused: '{ .PlayState.IsPaused }'
+                  is_muted: '{ .PlayState.IsMuted }'
 
   data:
     - secretKey: JELLYFIN_API_KEY
