--- a/.mise.toml
+++ b/.mise.toml
@@ -5,7 +5,7 @@ python.uv_venv_auto = true
 
 [env]
 KUBECONFIG = "{{ config_root }}/kubernetes/kubeconfig"
-TALOSCONFIG = "{{ config_root }}/kubernetes/talos/clusterconfig/talosconfig"
+TALOSCONFIG = "{{ config_root }}/kubernetes/talos/talosconfig"
 MINIJINJA_CONFIG_FILE="{{ config_root }}/.github/.minijinja.toml"
 HOMEBREW_BREWFILE="{{ config_root }}/.github/Brewfile"
 _.path = ['{{config_root}}/node_modules/.bin']
@@ -33,7 +33,6 @@ node = "24.14.0"
 
 # Talos
 "aqua:siderolabs/talos" = "1.12.4"
-"aqua:talhelper" = "3.1.5"
 
 # Tools
 "aqua:go-task/task" = "3.48.0"
@@ -61,3 +60,5 @@ node = "24.14.0"
 rust = "1.93.1"
 kubecolor = "latest"
 kubens = "0.9.5"
+just = "1.46.0"
+gum = "0.17.0"
