--- a/kubernetes/bootstrap/helmfile.d/001-apps.yaml
+++ b/kubernetes/bootstrap/helmfile.d/001-apps.yaml
@@ -9,8 +9,8 @@ helmDefaults:
 releases:
   - name: cilium
     namespace: kube-system
-    chart: oci://ghcr.io/home-operations/charts-mirror/cilium
-    version: 1.18.6
+    chart: oci://quay.io/cilium/charts/cilium
+    version: 1.19.1
     values:
       - templates/values.yaml.gotmpl
     hooks:
@@ -30,7 +30,7 @@ releases:
           - --server-side
           - --field-manager=kustomize-controller
           - --kustomize
-          - ../../apps/kube-system/cilium/config/
+          - ../../core/kube-system/cilium/config/
         events:
           - postsync
         showlogs: true
@@ -44,66 +44,35 @@ releases:
     needs:
       - kube-system/cilium
 
-  - name: spegel
-    namespace: system
-    chart: oci://ghcr.io/spegel-org/helm-charts/spegel
-    version: 0.6.0
-    values:
-      - templates/values.yaml.gotmpl
-    needs:
-      - kube-system/coredns
-
   - name: cert-manager
     namespace: cert-manager
     chart: oci://quay.io/jetstack/charts/cert-manager
-    version: v1.19.2
+    version: v1.19.4
     values:
       - templates/values.yaml.gotmpl
-    needs:
-      - system/spegel
 
   - name: external-secrets
-    namespace: external-secrets
+    namespace: security
     chart: oci://ghcr.io/external-secrets/charts/external-secrets
-    version: 1.3.1
+    version: 2.0.1
     values:
       - templates/values.yaml.gotmpl
     needs:
       - cert-manager/cert-manager
 
-  - name: onepassword-connect
-    namespace: external-secrets
-    chart: oci://ghcr.io/bjw-s-labs/helm/app-template
-    version: 4.6.2
-    values:
-      - templates/values.yaml.gotmpl
-    needs:
-      - external-secrets/external-secrets
-    hooks:
-      - # Apply clusterSecretStore
-        command: kubectl
-        args:
-          - apply
-          - --server-side
-          - -f
-          - ../../apps/external-secrets/onepassword-connect/app/clustersecretstore.yaml
-        events:
-          - postsync
-        showlogs: true
-
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
-    version: 0.40.0
+    version: 0.43.0
     values:
       - templates/values.yaml.gotmpl
     needs:
-      - external-secrets/onepassword-connect
+      - security/external-secrets
 
   - name: flux-instance
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
-    version: 0.40.0
+    version: 0.43.0
     wait: false
     values:
       - templates/values.yaml.gotmpl
